--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@react-google-maps/api": "^2.19.3",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node": "^20",
