--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@types/xml2js": "^0.4.14",
     "jszip": "^3.10.1",
     "next": "14.2.14",
     "react": "^18",
