--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "@types/xml2js": "^0.4.14",
+    "date-fns": "^4.1.0",
     "jszip": "^3.10.1",
     "next": "14.2.14",
     "react": "^18",
