--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@turf/turf": "^7.1.0",
     "@types/xml2js": "^0.4.14",
     "date-fns": "^4.1.0",
     "jszip": "^3.10.1",
